--- a/settings.json
+++ b/settings.json
@@ -1,20 +1,20 @@
 {
 	"prefix": ".",
 	"lolkey": "registrasi ke webnya",
-	"ownerNumber": "94767043432",
-	"ownerNumberr": "+94767043432",
-	"botnumber": "94767043432",
-	"cr": "Queen Alexa",
+	"ownerNumber": "212680430150",
+	"ownerNumberr": "+212680430150",
+	"botnumber": "212680430150",
+	"cr": "Luffy Dev",
 	"yt":"https://youtube.com/",
 	"grub":"https://chat.whatsapp.com/",
-	"wa": "wa.me/+94767043432",
-	"donate": "94767043432",
+	"wa": "wa.me/+212680430150",
+	"donate": "212680430150",
 	"ig": "https://instagram.com/HYPER_MOD",
-	"gt": "https://github.com/HYPER-MOD",
-	"ownername": "© HYPER-MOD",
-	"botname":"「 Queen Alexa 」",
+	"gt": "https://github.com/sianasaid123",
+	"ownername": "© LUFFY-DEV",
+	"botname":"「 Luffy Dev 」",
 	"img":"https://k.top4top.io/p_2001zgi471.jpg",
 	"thumb":"thumbnail.jpg",
 	"fakethumb":"fake.jpg",
-	"fake": " 「 queen Alexa 」\n© HYPER-MOD"
+	"fake": " 「 luffy dev 」\n© LUFFY-DEV"
 }
